--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -41,7 +41,7 @@
   flex-direction: column;
   width: 320px;
 }
-.main input[type="text"] {
+.main textarea {
   padding: 12px 16px;
   border: 1px solid #10a37f;
   border-radius: 4px;
@@ -62,6 +62,7 @@
   cursor: pointer;
 }
 .main .result {
+  max-width: 400px;
   font-weight: bold;
   margin-top: 40px;
 }
